--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "keywords": [],
@@ -15,5 +15,8 @@
   },
   "engines": {
     "node": "18.17.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
